# megaminx

./: CMakeLists.txt  main.cpp
lib/glew-cmake/auto/core/gl/: EGL_VERSION_1_0  GLX_ATI_render_texture  GLX_VERSION_1_3
lib/glfw/docs/: Doxyfile.in
lib/glfw/include/GLFW/: glfw3.h
lib/glfw/src/: context.c
lib/glm/: manual.md  readme.md
lib/glm/doc/api/: a00323.html  a00323_source.html  a00605.html  a00605_source.html  a00800_source.html  a00847.html  a00926.html  a00962.html  a01591.html  a01591_source.html
lib/glm/glm/ext/: quaternion_common.hpp
lib/glm/glm/gtx/: quaternion.hpp
src/: Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  Event.cpp  Event.hpp  Figure.cpp  Figure.hpp  PickingShader.cpp  PickingShader.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  Vertices.cpp  Window.cpp  Window.hpp
src/res/: main.glslv  picking.fs
